--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
   <html>
     <head>
       <title>OpenWebRX+ | F5430's OpenWebRX+ at Péronne</title>
+     <link rel="icon" href="favicon.ico" />
+      <style>
+        body {
+    margin: 0;          
+}
+iframe {
+    display: block;       
+    background: #000;
+    border: none;        
+    height: 100vh;       
+    width: 100vw;
+}
+      </style>
     </head>
     <body>
       <iframe src="https://fare-bailey-modifications-aims.trycloudflare.com/" width="100%" height="800px" frameborder="0"></iframe>
