--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <doctype html>
   <html>
     <head>
-      <title>OpenWebRX+ | F5430's OpenWebRX+ at Péronne</title>
+      <title>OpenWebRX+ | F5430SWL's OpenWebRX+ at Péronne</title>
      <link rel="icon" href="favicon.ico" />
       <style>
         body {
@@ -17,6 +17,6 @@ iframe {
       </style>
     </head>
     <body>
-      <iframe src="https://weeks-varieties-talking-mason.trycloudflare.com/" width="100%" height="800px" frameborder="0"></iframe>
+      <iframe src="https://debian.tail824f5b.ts.net/" width="100%" height="800px" frameborder="0"></iframe>
     </body>
   </html>
